fixed action rocolumn centering, possible scrollbar fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -229,6 +229,7 @@ td {
 
 .action-row {
   display: flex;
+  justify-content: center;
 }
 
 #delete {
